# YT_Downloader

./: .gitignore  .pre-commit-config.yaml  DetailedGuide.md  README.md  pyproject.toml  requirements.txt  ui.spec
.github/workflows/: ruff.yml
src/downloader_for_yt/: __init__.py  __main__.py  downloader.py  log.txt  main.py  requirements.txt  ui.py  youtube_downloader.py
src/downloader_for_yt/model/: VideoFormat.py  enums.py  list_manager.py
src/downloader_for_yt/view/: button_texts.py  rows.py  widgets.py  widgets_keys.py
tests/: test_downloader_app.py
