[tool.poetry]
name = "downloader-for-yt"
version = "0.1.0"
description = ""
authors = ["David <89795659+Tenvid@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "downloader_for_yt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "2024.5.27"
cmd2 = "2.4.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length=79

[tool.ruff.lint]
extend-select = [
    "F",    # pyflakes
    "UP",   # pyupgrade
    "I",    # isort
]
